plugins {
    id 'java'
    id 'war'
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

apply from: 'script.gradle'

repositories {
    mavenCentral()
}

configurations {
    Configuration configurationImpl = getByName("implementation")
    dmdev {
        description = "dmdev configuration"
    }
    configurationImpl.extendsFrom(dmdev)
}

dependencies {
    compileOnly "jakarta.servlet:jakarta.servlet-api:5.0.0"
    implementation("org.springframework:spring-webmvc:5.3.9")
    implementation('org.springframework:spring-aop:5.3.8')
}

jar {
    def jars = configurations.runtimeClasspath.files.collect { "lib/$it.name" }

    manifest {
        attributes 'Main-Class': 'com.itrex.HelloWorld',
                'Class-Path': jars.join(' ')
    }
    //ignore duplicates jar
//    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    //transfer dependencies runtimeClasspath to zip
//    from(configurations.runtimeClasspath.files.collect { project.zipTree(it) })
}

task copyAllDependecies(type: Copy) {
    from(configurations.runtimeClasspath.files)
    into("$buildDir/libs/lib")
}
jar.dependsOn copyAllDependecies

